--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.MyEnqueteDisneyland"
         tools:targetApi="31">
         <activity
+            android:name=".Resultat"
+            android:exported="false" />
+        <activity
+            android:name=".Page4"
+            android:exported="false" />
+        <activity
             android:name=".Page3"
             android:exported="false" />
         <activity
